service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-api-service
  namespace: backend
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: test-api
