ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test-api
  namespace: backend
  annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-ingress
  rules:
  - host: localhost
    http:
      paths:
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: test-api-service
            port:
              number: 80
